umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_h2co3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "H#v" "1" "O#n2#v2" "2" "C#v4" "3" "O#n2#v2" "4" "O#n2#v2" "5" "H#v"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "2"] ["2" "4" "1"] ["4" "5" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "H#v" "1" "O#n2#v2" "2" "C#v4" "3" "O#n2#v2" "4" "O#n2#v2" "5" "H#v"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "2"] ["2" "4" "1"] ["4" "5" "1"]] :charge 0 :spin "#u0 #s1"}}}
