umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_h2o2.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "H#v"
      - "O#n2#v2"
      - "O#n2#v2"
      - "H#v"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "H#v"
      - "O#n2#v2"
      - "O#n2#v2"
      - "H#v"
    bonds:
      - "-"
      - "-"
      - "-"
